--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "require": {
         "php" : ">=8.0",
-        "symfony/finder": "^5.3",
+        "symfony/finder": "^5.3|^6.3",
         "nikic/php-parser": "^4.13",
         "phpstan/phpdoc-parser": "^1.23"
     },
